--- a/build.xml
+++ b/build.xml
@@ -307,6 +307,7 @@
         <zipfileset src="${build.lib.dir}/joda-time-1.6.1.jar"/>
         <zipfileset src="${build.lib.dir}/yydebug.jar"/>
         <zipfileset src="${build.lib.dir}/nailgun-0.7.1.jar"/>
+        <zipfileset src="${build.lib.dir}/clojure.jar"/>
         <metainf dir="${base.dir}/spi">
           <include name="services/**"/>
         </metainf>
